# minimonitor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: secret-scan.yml
.superpowers/sdd/: task-1-report.md  task-15-report.md
crates/agent/: Cargo.toml
crates/agent/src/: main.rs  push.rs
crates/core/: Cargo.toml
crates/core/src/: ai.rs  lib.rs  net.rs  snapshot.rs  util.rs
crates/fleet/: Cargo.toml  askama.toml  service-labels.example.toml  store.example.toml
crates/fleet/assets/: app.css  board.js  manifest.webmanifest  store.css  store.js  sw.js
crates/fleet/src/: agent_client.rs  alert.rs  beszel.rs  cloudflare.rs  config.rs  doctor.rs  export.rs  lib.rs  main.rs  merge.rs  model.rs  overrides.rs  probe.rs  secrets.rs  service_label.rs  store.rs  tailscale.rs
crates/fleet/src/commands/: cf_sync.rs  collect.rs  enroll.rs  heartbeat.rs  list.rs  mod.rs  probe.rs  serve.rs  show.rs  ssh.rs  sync.rs
crates/fleet/src/db/: cf.rs  host.rs  mod.rs  nodes.rs  probe.rs
crates/fleet/src/kuma/: mod.rs  sio.rs  tests.rs
crates/fleet/src/serve/: hub.rs  mod.rs  routes.rs  templates.rs
crates/fleet/src/serve/templates/: base.html  board.html  inventory.html  inventory_table.html  node.html  observability.html  paths.html  ports.html  store.html  workloads.html
crates/fleet/tests/: agent_client_tests.rs  cli_smoke.rs  collect_loop_test.rs  config_secrets_doctor_test.rs  deploy_test.rs  export_tests.rs  fixture_scrub_test.rs  gitignore_test.rs  host_snapshot_tests.rs  kuma_transport.rs  secret_scan_test.rs  snapshot_roundtrip.rs
crates/fleet/tests/fixtures/: snapshot.json
crates/fleet/tests/fixtures/export/: fleet_export.golden.json
crates/fleet/tests/fixtures/kuma/: add_ack.json  delete_ack.json  edit_ack.json  login_ack.json  monitor_list_broadcast.json  monitor_spec_http.json  monitor_spec_ping.json  monitor_spec_port.json
crates/menubar/: Cargo.toml
crates/menubar/src/: actions.rs  ai.rs  app.rs  inspector.html  inspector.rs  main.rs  services.rs  tray.rs  util.rs
deploy/: .env.example  README.md  docker-compose.yml
deploy/agent/: README.md  docker-compose.yml
docs/notes/2026-W15/: 2026-04-12.md
docs/notes/2026-W23/: 2026-06-03.md
docs/notes/2026-W26/: 2026-06-22.md
docs/superpowers/plans/: 2026-06-03-minimonitor-core-agent-refactor.md  2026-06-20-phase-0-1-fleet-registry-observability.md  2026-06-22-port-service-naming.md  2026-06-23-fleet-host-snapshots.md
docs/superpowers/specs/: 2026-06-03-beszel-spike-runbook.md  2026-06-03-minimonitor-core-agent-refactor-design.md  2026-06-20-fleet-architecture-north-star.md  2026-06-20-phase-0-1-fleet-registry-observability-design.md  2026-06-22-port-service-naming-design.md  2026-06-23-fleet-host-snapshots-design.md  2026-06-24-display-resolution-presets-design.md
launchd/: com.caguabot.minimonitor.plist
scripts/: install.sh  install_test.sh  kuma-record.js  secret-scan.sh  secret-scan.test.sh
src/: inspector.rs  main.rs
