[workspace]
resolver = "2"
members = ["crates/core", "crates/agent", "crates/menubar"]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = "line-tables-only"
incremental = false
