[package]
name = "minimonitor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "minimonitor"
path = "src/main.rs"

[dependencies]
minimonitor-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tao = "0.34"
tray-icon = { version = "0.21", default-features = false }
wry = "0.54"
